--- a/news_and_events/templates/news_and_event_details.html
+++ b/news_and_events/templates/news_and_event_details.html
@@ -32,8 +32,8 @@
                         </button>
                     </div>
                     
-                    <div class="mt-4">
-                        Tag: <span class="badge bg-secondary">{{ news.tag }}</span>
+                    <div class="blog-date text-center">
+                        <span>{{ news.tag }}</span>
                     </div>
                     
                     <h1><b>{{ news.title }}</b></h1>
