--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -65,47 +65,47 @@
     <img src="{% static 'images/double-down.gif' %}" width="40" height="40" style="position: absolute; left:600px !important;" />
   </div>
 
-  <div class="card-container d-flex flex-wrap" style="margin-top: -30px !important">
+<div class="container my-3" style="margin-top: -30px !important">
     <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="card mb-3 flex-fill">
-                    <div class="card-header">
-                        <img src="{% static 'images/icons/youth.png' %}" width="80" height="80" style="position:absolute; left:90px" />
-                        <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center">Working Age (15-64)</h5>
-                        <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">52%</h3>
-                    </div>
-            </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+        <div class="card">
+                <div class="card-header">
+                    <img src="{% static 'images/icons/youth.png' %}" width="80" style="position:absolute; left:90px; max-height:90px" />
+                    <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center">Working Age (15-64)</h5>
+                    <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">52%</h3>
+                </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="card mb-3 flex-fill">
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="card">
                     <div class="card-header">
-                        <img src="{% static 'images/icons/bar-chart.png' %}" width="80" height="80" style="position:absolute; left:90px" />
+                        <img src="{% static 'images/icons/bar-chart.png' %}" width="80" style="position:absolute; left:90px; max-height:90px" />
                         <h5 class="card-title px-2" style="font-weight:800; margin-top: 100px; text-align: center">Unemployment Rate</h5>
                         <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">3.6%</h3>
                     </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="card mb-3 flex-fill">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="card">
                     <div class="card-header">
-                        <img src="{% static 'images/icons/analytics.png' %}" width="80" height="80" style="position:absolute; left:90px" />
+                        <img src="{% static 'images/icons/analytics.png' %}" width="80" style="position:absolute; left:90px; max-height:90px" />
                         <h5 class="card-title px-4" style="font-weight:700; margin-top: 100px; text-align: center">Employer</h5>
                         <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">5.2%</h3>
                     </div>
             </div>
         </div>
         
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="card mb-3 flex-fill">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="card">
                     <div class="card-header">
-                        <img src="{% static 'images/icons/job-search.png' %}" width="80" height="80" style="position:absolute; left:90px" />
+                        <img src="{% static 'images/icons/job-search.png' %}" width="80" style="position:absolute; left:90px max-height:90px" />
                         <h5 class="card-title px-5" style="font-weight:800; margin-top: 100px; text-align: center">Job Vacancy</h5>
                         <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">{{jobs_count}}</h3>
                     </div>
             </div>
         </div>
     </div>
-  </div>
+</div>
 
 <!-- How  Apply Process Start-->
 <div class="apply-process-area apply-bg pt-60 pb-60" style="background-color: #29569F;">
