--- a/news_and_events/templates/news_and_events.html
+++ b/news_and_events/templates/news_and_events.html
@@ -17,28 +17,31 @@
         </div>
     </div>
 
-    <div class="card-container d-flex flex-wrap">
-        <div class="row">
-            {% for news in news_and_events_list %}
-            <div class="col-xl-4 col-lg-4 col-md-4 mb-5">
-                <div class="home-blog-single mb-30 mb-3 flex-fill" style="height:450px">
-                    <div class="blog-img-cap">
-                        <div class="blog-img">
-                            <img src="{{ news.image1.url }}" alt="" height="200" width="100%"> 
-                            <!-- Blog date -->
-                            <div class="blog-date text-center">
-                                <span>{{ news.tag }}</span>
+    <!-- News and Events Start -->
+    <div class="home-blog-area" style="background-color:#f5f5f5;">
+        <div class="card-container d-flex flex-wrap">
+            <div class="row">
+                {% for news in news_and_events_list %}
+                <div class="col-xl-4 col-lg-4 col-md-4 mb-5">
+                    <div class="home-blog-single mb-30 mb-3 flex-fill" style="height:450px">
+                        <div class="blog-img-cap">
+                            <div class="blog-img">
+                                <img src="{{ news.image1.url }}" alt="" height="200" width="100%"> 
+                                <!-- Blog date -->
+                                <div class="blog-date text-center">
+                                    <span>{{ news.tag }}</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="blog-cap">
-                        <p>|   {{ news.published_date }}</p>
-                        <h5 style="width: 100%">{{ news.title }}</h5>
-                        <a href="{% url 'news_and_event_detail' news.id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
+                        <div class="blog-cap">
+                            <p>|   {{ news.published_date }}</p>
+                            <h5 style="width: 100%">{{ news.title }}</h5>
+                            <a href="{% url 'news_and_event_detail' news.id %}" class="btn btn-primary mt-4" style="color:white; background-color:#29569F">Read More</a>
+                        </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
     </div>
 
