--- a/jobs/templates/job_detail.html
+++ b/jobs/templates/job_detail.html
@@ -43,23 +43,8 @@
                         <h4 class="mb-3">Job description</h4>
                         <p>{{description}}</p>
                         <h4 class="mb-3 mt-5">Job requirements</h4>
-                        <p>{{requirements}}</p>
-                        <ul class="list-unstyled">
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum accusam</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita labore gubergren</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at sanctus erat</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est</li>
-                        </ul>
-                        <h4 class="mb-3 mt-5">Qualification</h4>
-                        <p>{{qualification}}</p>
-                        <ul class="list-unstyled">
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum accusam</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita labore gubergren</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at sanctus erat</li>
-                            <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est</li>
-                        </ul>
+                        <div>{{requirements}}</div>
+                        
                     </div>
                 </div>
     
@@ -67,12 +52,11 @@
                     <div class="rounded p-5 mb-4 wow slideInUp" style="background-color:#29569F" data-wow-delay="0.1s">
                         <h4 class="mb-4" style="color:white">Job Summary</h4>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Company: {{company}}</p>
-                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Posted at: {{created_at}}</p>
+                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Posted at: {{published_at}}</p>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Application ends: {{expiration_date}}</p>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Sector: {{sector}}</p>
-                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Location: {{location}}</p>
+                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Location: {{district}}</p>
                         <p style="color:white" class="m-0"><i class="fa fa-angle-right text-primary me-2"></i>Experience: {{experience}}</p>
-                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Salary: {{salary}}</p>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Contract: {{contract}}</p>
                         
                         
