--- a/news_and_events/templates/news_and_events.html
+++ b/news_and_events/templates/news_and_events.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- News and Events Start -->
-    <div class="home-blog-area" style="background-color:#f5f5f5;">
+    <div class="home-blog-area container" style="background-color:#f5f5f5;">
         <div class="card-container d-flex flex-wrap">
             <div class="row">
                 {% for news in news_and_events_list %}
