--- a/jobs/templates/job_detail.html
+++ b/jobs/templates/job_detail.html
@@ -52,17 +52,17 @@
                     <div class="rounded p-5 mb-4 wow slideInUp" style="background-color:#29569F" data-wow-delay="0.1s">
                         <h4 class="mb-4" style="color:white">Job Summary</h4>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Company: {{company}}</p>
-                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Posted at: {{published_at}}</p>
+                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Posted at: {{published_date}}</p>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Application ends: {{expiration_date}}</p>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Sector: {{sector}}</p>
-                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Location: {{district}}</p>
+                        <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Location: {{location}}</p>
                         <p style="color:white" class="m-0"><i class="fa fa-angle-right text-primary me-2"></i>Experience: {{experience}}</p>
                         <p style="color:white"><i class="fa fa-angle-right text-primary me-2"></i>Contract: {{contract}}</p>
                         
                         
                         
                     </div>
-                    <div class="rounded p-5 wow slideInUp" data-wow-delay="0.1s" style="background-color:#29569F;">
+                    <div class="rounded p-5 wow slideInUp mb-5" data-wow-delay="0.1s" style="background-color:#29569F;">
                         <h4 style="color:white" class="mb-4">Company Detail</h4>
                         <p style="color:white" class="m-0">Ipsum dolor ipsum accusam stet et et diam dolores, sed rebum sadipscing elitr vero dolores. Lorem dolore elitr justo et no gubergren sadipscing, ipsum et takimata aliquyam et rebum est ipsum lorem diam. Et lorem magna eirmod est et et sanctus et, kasd clita labore.</p>
                     </div>
