--- a/jobs/templates/jobs.html
+++ b/jobs/templates/jobs.html
@@ -50,7 +50,7 @@
             </select>
           </div>
 
-        <button onclick="call('filter_jobs')" class="btn" style="background-color:#29569F; color:#FFFFFF">Apply Filter</button>
+        <button type="submit" class="btn" style="background-color:#29569F; color:#FFFFFF">Apply Filter</button>
       </form>
     </div>
     <div class="col-md-9">
