--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LMIS</title>
+    <title>SL-LMIS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,36 +52,36 @@
           <div class="col-md-3">
             <h5 class="text-white">SL-LMIS</h5>
             <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Terms of Service</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li class="text-white"><a href="#">About Us</a></li>
+              <li class="text-white"><a href="#">Contact Us</a></li>
+              <li class="text-white"><a href="#">Terms of Service</a></li>
+              <li class="text-white"><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
           <div class="col-md-3">
             <h5 class="text-white">Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="https://mof.gov.sl/">Ministry of Finance</a></li>
-              <li><a href="https://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html">Statistics Sierra Leone</a></li>
-              <li><a href="https://www.ilo.org/africa/countries-covered/sierra-leone/lang--en/index.htm">Internation Labour Organization (ILO)</a></li>
-              <li><a href="https://ilostat.ilo.org/data/country-profiles/">Internation Labour Organization (ILOSTAT)</a></li>
-              <li><a href="https://data.worldbank.org/indicator/SL.TLF.ACTI.FE.ZS?locations=SL">The World Bank</a></li>
+              <li class="text-white"><a href="https://mof.gov.sl/">Ministry of Finance</a></li>
+              <li class="text-white"><a href="https://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html">Statistics Sierra Leone</a></li>
+              <li class="text-white"><a href="https://www.ilo.org/africa/countries-covered/sierra-leone/lang--en/index.htm">Internation Labour Organization (ILO)</a></li>
+              <li class="text-white"><a href="https://ilostat.ilo.org/data/country-profiles/">Internation Labour Organization (ILOSTAT)</a></li>
+              <li class="text-white"><a href="https://data.worldbank.org/indicator/SL.TLF.ACTI.FE.ZS?locations=SL">The World Bank</a></li>
             </ul>
           </div>
           <div class="col-md-3">
             <h5 class="text-white">Contact</h5>
-            <p class="mb-0 text-white ">123 Main Street, City</p>
-            <p class="mb-0 text-white ">State, Country 12345</p>
-            <p class="mb-0 text-white ">Phone: (123) 456-7890</p>
-            <p class="text-white">Email: info@example.com</p>
+            <p class="mb-0 text-white ">FQC6+C86 Ministry of Employment & Social Security, Jomo Kenyatta Rd</p>
+            <p class="mb-0 text-white ">Freetown, Sierra Leone</p>
+            <p class="mb-0 text-white ">Phone: +232 22 241947</p>
+            <p class="text-white">Email: information@molss.gov.sl</p>
           </div>
           <div class="col-md-3">
             <h5 class="text-white">Connect With Us</h5>
             <ul class="list-unstyled">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">LinkedIn</a></li>
+              <li class="text-white"><a href="#">Facebook</a></li>
+              <li class="text-white"><a href="#">Twitter</a></li>
+              <li class="text-white"><a href="#">Instagram</a></li>
+              <li class="text-white"><a href="#">LinkedIn</a></li>
             </ul>
         </div>
       </div>
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="text-white">&copy; 2023 <a class="text-reset fw-bold" href="https://mdbootstrap.com/" style="color:#FFFFFF">Ministry of Labour and Social Security.</a> All Rights Reserved.</p>
+            <p class="text-white">&copy; 2023 <a class="text-reset fw-bold" href="{% url 'home' %}" style="color:#FFFFFF">Ministry of Employment and Social Security.</a> All Rights Reserved.</p>
           </div>
           <div class="col-md-6">
             <ul class="list-unstyled list-inline float-md-end">
