--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light container-fluid">
   <a class="navbar-brand" href="{% url 'home' %}">
-    <img src="{% static 'images/labor logo.jpg' %}" alt="Logo" width="90" height="90" class="d-inline-block align-text-center">
+    <img src="{% static 'images/logo.jpeg' %}" alt="Logo" width="90" height="90" class="d-inline-block align-text-center">
     <span>SL-LMIS</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
