--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -88,7 +88,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
             <div class="card">
                     <div class="card-header">
-                        <img src="{% static 'images/icons/analytics.png' %}" width="80" style="position:absolute; left:90px; height:90px" />
+                        <img src="{% static 'images/icons/analytics.png' %}" width="80" height:"100" style="position:absolute; left:90px; " />
                         <h5 class="card-title px-4" style="font-weight:700; margin-top: 100px; text-align: center">Employer</h5>
                         <h3 style="color: #29569F; font-size: 35px; font-weight: 800; text-align: center">10</h3>
                     </div>
